# instant_ai_translator

./: .gitignore  FEATURES_EXPLAINED.md  NAVIGATION_TEST.md  PIPE_SYMBOL_FIX.md  README.md  build_native.sh  debug_text_replacement.dart  flutter_menu_control_demo.sh  phase3_complete_test.dart  phase3_integration_test.sh  phase3_simple_test.dart  phase3_success_summary.sh  phase3_working_demo.dart  phase4_completion.sh  phase4_completion_summary.sh  phase4_demo.sh  phase4_demo_test.py  pipe_test_document.txt  pubspec.yaml  run_release.sh  test_document.txt  test_ffi.dart  test_flutter_menus.dart  test_hotkey.sh
android/app/: build.gradle.kts
docs/: ANDROID_NATIVE_INTEGRATION_PLAN.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: context_menu_item.dart
lib/native/: system_integration.dart  system_integration_safe.dart
lib/screens/: activity_monitor_screen.dart  context_menu_manager_screen.dart  context_menu_manager_screen_v2.dart  home_screen.dart  phase3_demo_screen.dart  phase3_demo_screen_v2.dart  production_main_screen.dart  settings_screen.dart  system_status_screen.dart
lib/services/: activity_service.dart  ai_settings_service.dart  context_menu_config_service.dart  gemini_ai_service.dart  native_integration_service.dart  native_integration_service_v2.dart  production_context_menu_service.dart
lib/widgets/: navigation_sidebar.dart  translation_panel.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
native/: CMakeLists.txt
native/include/: instant_translator.h
native/src/: context_menu_injector.cpp  context_menu_injector.h  dbus_service.cpp  dbus_service.h  main.cpp  system_hooks.cpp  text_replacement.cpp  text_replacement.h  text_selection_monitor.cpp  text_selection_monitor.h
research/: LINUX_INTEGRATION_RESEARCH.md  PHASE2_PROGRESS_SUMMARY.md  context_menu_test.py  dbus_ipc_test.py  system_integration_demo.py  text_selection_monitor.py
test/: ai_settings_service_test.dart  context_menu_ai_integration_test.dart  gemini_ai_test.dart  improved_gemini_test.dart  url_construction_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+10 files in other folders)
